[package]

authors = [ "iximeow <me@iximeow.net>" ]
description = "fundamental traits to describe an architecture in the yaxpeax project"
keywords = ["disassembly", "disassembler"]
license = "0BSD"
name = "yaxpeax-arch"
repository = "https://git.iximeow.net/yaxpeax-arch/"
version = "0.0.1"
edition = "2018"

[dependencies]
"num-traits" = "0.2"
"termion" = "1.4.0"
"serde" = "1.0"

[profile.release]
lto = true

[features]
default = []

# enables the (optional) use of Serde for bounds on
# Arch and Arch::Address
use-serde = []
