[package]

authors = [ "iximeow <me@iximeow.net>" ]
description = "fundamental traits to describe an architecture in the yaxpeax project"
edition = "2018"
keywords = ["disassembly", "disassembler"]
license = "0BSD"
name = "yaxpeax-arch"
repository = "https://git.iximeow.net/yaxpeax-arch/"
version = "0.0.2"

[dependencies]
"num-traits" = { version = "0.2", default-features = false }
"termion" = { version = "1.4.0", optional = true }
"serde" = { version = "1.0", optional = true }

[profile.release]
lto = true

[features]
default = ["use-serde", "colors", "address-parse"]

# enables the (optional) use of Serde for bounds on
# Arch and Arch::Address
use-serde = ["serde"]

colors = ["termion"]

address-parse = []
