[package]

authors = [ "iximeow <me@iximeow.net>" ]
description = "fundamental traits to describe an architecture in the yaxpeax project"
edition = "2018"
keywords = ["disassembly", "disassembler"]
license = "0BSD"
name = "yaxpeax-arch"
repository = "https://git.iximeow.net/yaxpeax-arch/"
version = "0.2.2"

[dependencies]
"num-traits" = { version = "0.2", default-features = false }
"crossterm" = { version = "0.19.0", optional = true }
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = "1.0.41"
thiserror = "1.0.26"

[profile.release]
lto = true

[features]
default = ["std", "use-serde", "colors", "address-parse"]

std = []

# enables the (optional) use of Serde for bounds on
# Arch and Arch::Address
use-serde = ["serde", "serde_derive"]

colors = ["crossterm"]

address-parse = []
